# patina

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  clippy.toml  deny.toml  justfile
.claude/agents/: speccy-decompose.md  speccy-work.md  vet-implementer.md
.claude/commands/spec/: implement-phase.md  new-adr.md  validate-phase.md
.claude/rules/rust/: rust-let-types-carry-invariants.md
.githooks/: README.md  pre-commit  pre-push
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: phase-implementation.md  spec-proposal.md
.github/workflows/: ci.yml
.speccy/archive/0001-patina-core-engine/: SPEC.md  TASKS.md
.speccy/archive/0001-patina-core-engine/evidence/: T-004.md  T-005.md  T-010.md  T-011.md  T-012.md  T-013.md  T-016.md  T-018.md  T-019.md  T-020.md  T-025.md  T-027.md
.speccy/archive/0001-patina-core-engine/journal/: T-002.md  T-003.md  T-005.md  T-006.md  T-008.md  T-010.md  T-013.md  T-017.md  T-020.md  T-021.md  T-022.md  T-025.md  T-027.md  VET.md
.speccy/archive/0002-patina-complete-cli/: REPORT.md  SPEC.md  TASKS.md
.speccy/archive/0002-patina-complete-cli/evidence/: T-001.md  T-005.md  T-006.md  T-007.md  T-008.md  T-012.md
.speccy/archive/0002-patina-complete-cli/journal/: T-001.md  T-003.md  T-006.md  T-007.md  T-008.md  T-012.md
.speccy/archive/0003-patina-watch/: REPORT.md  SPEC.md
.speccy/archive/0003-patina-watch/evidence/: T-001.md  T-002.md  T-005.md  T-006.md  T-008.md  T-011.md
.speccy/archive/0003-patina-watch/journal/: T-003.md  T-004.md  T-007.md  T-008.md  T-009.md  T-010.md  T-012.md  VET.md
.speccy/archive/0004-patina-conditional-entries/: SPEC.md
.speccy/archive/0004-patina-conditional-entries/evidence/: T-005.md  T-008.md  T-010.md  T-011.md
.speccy/archive/0004-patina-conditional-entries/journal/: T-001.md  T-002.md  T-005.md  T-006.md  T-008.md  T-010.md  VET.md
.speccy/archive/0005-patina-skip-if-satisfied/: REPORT.md  SPEC.md
.speccy/archive/0005-patina-skip-if-satisfied/evidence/: T-001.md  T-002.md  T-004.md  T-005.md  T-006.md  T-007.md  T-008.md  T-010.md
.speccy/archive/0005-patina-skip-if-satisfied/journal/: T-001.md  T-005.md  T-006.md  T-007.md  T-008.md  T-009.md  VET.md
.speccy/specs/0001-patina-core-engine/: REPORT.md  SPEC.md  TASKS.md
.speccy/specs/0001-patina-core-engine/evidence/: T-001.md  T-003.md  T-008.md  T-009.md  T-014.md  T-015.md  T-017.md  T-021.md  T-023.md  T-024.md  T-026.md  T-028.md
.speccy/specs/0001-patina-core-engine/journal/: T-001.md  T-004.md  T-007.md  T-009.md  T-011.md  T-012.md  T-014.md  T-015.md  T-016.md  T-018.md  T-019.md  T-023.md  T-024.md  T-026.md  T-028.md  VET.md
.speccy/specs/0002-patina-complete-cli/: SPEC.md  TASKS.md
.speccy/specs/0002-patina-complete-cli/evidence/: T-002.md  T-003.md  T-004.md  T-009.md  T-010.md  T-011.md
.speccy/specs/0002-patina-complete-cli/journal/: T-002.md  T-004.md  T-005.md  T-009.md  T-010.md  T-011.md  VET.md
.speccy/specs/0003-patina-watch/: SPEC.md  TASKS.md
.speccy/specs/0003-patina-watch/evidence/: T-003.md  T-004.md  T-007.md  T-009.md  T-010.md  (+2 more)
.speccy/specs/0004-patina-conditional-entries/: REPORT.md  SPEC.md  TASKS.md
.speccy/specs/0005-patina-skip-if-satisfied/: SPEC.md  TASKS.md
docs/: ARCHITECTURE.md  OPERATING_ENVIRONMENT.md  USER_GUIDE.md  operating-environment.md
patina-cli/: Cargo.toml
patina-cli/src/: cli.rs  exit_code.rs  main.rs
patina-cli/src/cmd/: add.rs  apply.rs  debug.rs  doctor.rs  init.rs  managed.rs  mod.rs  promote.rs  remove.rs  rollback.rs  status.rs  watch.rs
patina-cli/src/output/: diff.rs  mod.rs  reporter.rs
patina-cli/tests/: add_cli.rs  add_directory.rs  apply_cli.rs  apply_idempotency.rs  auto_match_predicates.rs  cargo_deny_config.rs  clippy_disallowed_macros.rs  commit_record.rs  conditional_entries.rs  debug_drift_cache_cli.rs  debug_journal_cli.rs  deterministic_stdout.rs  diff_render_snapshot.rs  docs_structure.rs  doctor_cli.rs  exit_codes.rs  help_subcommand.rs  init_cli.rs  promote_cli.rs  remove_cli.rs  rollback_cli.rs  skip_if_satisfied.rs  source_kind_validation.rs  status_cli.rs  symlink_reapply.rs  symlink_tree.rs  symlink_tree_orphans.rs  variable_layers.rs  watch_foreground_cli.rs  watch_service_cli.rs
patina-cli/tests/common/: mod.rs
patina-cli/tests/snapshots/: diff_render_snapshot__partial_apply_diff_omits_unchanged_bodies_and_summarizes_the_count.snap
patina-core/: Cargo.toml
patina-core/examples/: lock_helper.rs
patina-core/src/: clock.rs  error.rs  fsx.rs  lib.rs  lock.rs  paths.rs  profile.rs  state_dir.rs  version_envelope.rs
patina-core/src/apply/: classify.rs  copy.rs  engine.rs  hooks.rs  mod.rs  retry.rs  symlink.rs  template.rs
patina-core/src/backups/: mirror.rs  mod.rs  retention.rs
patina-core/src/config/: file_entry.rs  hook_entry.rs  mod.rs  root.rs  writer.rs
patina-core/src/discovery/: mod.rs  modules.rs  repo.rs
patina-core/src/journal/: disposition.rs  mod.rs  plan.rs  probe.rs  progress.rs  record.rs  recovery.rs  render.rs  sync.rs
patina-core/src/rollback/: mod.rs  replay.rs
patina-core/src/status/: classify.rs  mod.rs
patina-core/src/template/: mod.rs  strict.rs
patina-core/src/variables/: builtins.rs  mod.rs
patina-core/src/watch/: debounce.rs  drift.rs  drift_cache.rs  logging.rs  mod.rs  reapply.rs  subscriptions.rs
patina-core/src/watch/service/: launchd.rs  mod.rs  scheduled_task.rs  systemd.rs  unsupported.rs
patina-core/src/windows/: elevate.rs  mod.rs  registry.rs
patina-core/tests/: backup_retention.rs  backups.rs  config_file_entry.rs  config_hook_entry.rs  drift_cache.rs  executor_modes.rs  fs_retry.rs  hooks_force_deploy.rs  hooks_must_succeed.rs  journal_fsync_shape.rs  lock_concurrency.rs  module_discovery.rs  multi_target.rs  path_canon.rs  profile_resolution.rs  recovery_crash.rs  repo_discovery.rs  rollback_atomic.rs  state_dir_resolution.rs  template_strict.rs  variables.rs  version_envelope.rs  watch_logging.rs
patina-elevate/: Cargo.toml
patina-elevate/src/: devmode.rs  lib.rs  main.rs
patina-elevate/tests/: artifact_absence.rs  cli.rs
(+27 files in other folders)
