[workspace]
members = ["patina-cli", "patina-core"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
license = "MIT"
authors = ["Kevin Xiao <kevin@squint.ai>"]
repository = "https://github.com/kvnxiao/patina"
homepage = "https://github.com/kvnxiao/patina"
readme = "README.md"

[workspace.dependencies]
anyhow = "1.0"
blake3 = "1.5"
camino = { version = "1.1", features = ["serde1"] }
clap = { version = "4.5", features = ["derive"] }
fs-err = "3.0"
fs2 = "0.4"
is-terminal = "0.4"
jiff = "0.2"
minijinja = "2.20"
postcard = { version = "1.1", default-features = false, features = ["use-std"] }
pulldown-cmark = { version = "0.13", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
similar = "3.1"
tempfile = "3.10"
thiserror = "2.0"
tokio = { version = "1.52", default-features = false }
toml = "1.1"
tracing = "0.1"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
# Groups (broad coverage)
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }

# Cargo group escape hatch — multiple versions inflate compile time but are
# rarely actionable for transitive deps; tighten once the dep graph stabilises.
multiple_crate_versions = "allow"

# Restriction lints — opt-in individually.

# Don't panic
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
unreachable = "deny"
string_slice = "deny"
indexing_slicing = "deny"
get_unwrap = "deny"
unwrap_in_result = "deny"
panic_in_result_fn = "deny"
unchecked_time_subtraction = "deny"
todo = "deny"
unimplemented = "deny"

# Don't fail silently
let_underscore_future = "deny"
let_underscore_must_use = "deny"
unused_result_ok = "deny"
map_err_ignore = "deny"
assertions_on_result_states = "deny"

# Async correctness
await_holding_lock = "deny"
await_holding_refcell_ref = "deny"
if_let_mutex = "deny"
large_futures = "deny"

# Unsafe hygiene
mem_forget = "deny"
undocumented_unsafe_blocks = "deny"
multiple_unsafe_ops_per_block = "deny"
unnecessary_safety_doc = "deny"
unnecessary_safety_comment = "deny"

# Float correctness
float_cmp = "deny"
float_cmp_const = "deny"
lossy_float_literal = "deny"
invalid_upcast_comparisons = "deny"

# Misc footguns
rc_mutex = "deny"
debug_assert_with_mut_call = "deny"
iter_not_returning_iterator = "deny"
expl_impl_clone_on_copy = "deny"
infallible_try_from = "deny"
dbg_macro = "deny"

# Force #[expect(..., reason = "...")] over silent #[allow]
allow_attributes = "deny"
allow_attributes_without_reason = "deny"

# Performance
large_enum_variant = "warn"
large_stack_arrays = "deny"
needless_pass_by_value = "warn"

# Style
missing_errors_doc = "warn"
missing_panics_doc = "warn"

[profile.release]
opt-level = 3
lto = "thin"
strip = true
