[package]
name = "patina-core"
description = "Core library for the patina cross-platform dotfile manager."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords = ["dotfiles", "config", "templating", "cross-platform"]
categories = ["config", "filesystem"]

[dependencies]
blake3 = { workspace = true }
camino = { workspace = true }
fs-err = { workspace = true }
fs2 = { workspace = true }
jiff = { workspace = true }
minijinja = { workspace = true }
postcard = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = [
    "rt-multi-thread",
    "fs",
    "process",
    "signal",
    "sync",
    "time",
    "io-util",
    "macros",
] }
toml = { workspace = true }
toml_edit = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }

# REQ-007 Developer Mode / elevation reads + the one-time UAC launch.
# Windows-only so non-Windows builds never resolve `winsafe` into the
# graph. On top of the workspace `advapi` + `kernel` (registry + token
# reads), this crate also needs `shell` for `ShellExecuteEx` (the `runas`
# launch of `patina-elevate.exe`); the helper crate does NOT, so the
# feature is added here per-crate rather than at the workspace level.
[target.'cfg(windows)'.dependencies]
winsafe = { workspace = true, features = ["shell"] }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
